--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -186,6 +186,10 @@ footer, header, hgroup, menu, nav, section {
     }
 }
 
+#Login{
+    margin-left:0;
+}
+
 .background-1{ background: #fff url(../images/landscape-1.png) left bottom repeat-x; }
 .background-2{ background: #fff url(../images/landscape-2.png) left bottom repeat-x; }
 .background-3{ background: #fff url(../images/landscape-3.png) left bottom repeat-x; }
@@ -3426,6 +3430,13 @@ div.wide.form{
     }
 }
 
+/*=Madlib*/
+.mad-lib{
+    input{
+        width:auto !important;
+        margin:auto 10px !important;
+    }
+}
 
 /*=Temp Addreess Fields*/
 div.overlay-label-field{
